--- a/index.html
+++ b/index.html
@@ -43,5 +43,57 @@
             <p class="paragraph">Our purpose... <br>"unleash the gamer in everyone"</p>
         </div>
     </section>
+
+    <section class="video-container">
+        <h2>Online Games <span class="h2-pink">Funny Videos</span></h2>
+        <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+        <div class="image-gallery">
+            <div class="image-wrapper">
+              <img class="image" src="images/Rectangle 6.png" alt="">
+              <div class="play-button">
+                <svg class="play-icon" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                  <polygon points="30,20 30,80 80,50" />
+                </svg>
+              </div>
+            </div>
+            <div class="image-wrapper">
+              <img class="image" src="images/Rectangle 4.png" alt="">
+              <div class="play-button">
+                <svg class="play-icon" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                  <polygon points="30,20 30,80 80,50" />
+                </svg>
+              </div>
+            </div>
+            <div class="image-wrapper">
+              <img class="image" src="images/Rectangle 5.png" alt="">
+              <div class="play-button">
+                <svg class="play-icon" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                  <polygon points="30,20 30,80 80,50" />
+                </svg>
+              </div>
+            </div>
+            <div class="image-wrapper">
+              <img class="image" src="images/Rectangle 7.png" alt="">
+              <div class="play-button">
+                <svg class="play-icon" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                  <polygon points="30,20 30,80 80,50" />
+                </svg>
+              </div>
+            </div>
+          </div>
+    </section>
+
+    <section class="play-games">
+        <div class="play-games-img">
+            <img src="images/Rectangle 67.png" alt="" class="back-img">
+            <img src="images/Rectangle 78.png" alt="" class="over-img">
+        </div>
+        <div class="play-games-text">
+            <h1>Play Games Online<span style="color: black;"> Anywhere, Anytime!</span></h1>
+            <p class="">PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for free, any time, anywhere , on any device.</p>
+        </div>
+    </section>
+
+
 </body>
 </html>
